--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,18 @@
     border-bottom: 0.5px solid rgb(255, 255, 255);
 }
 
+.navbar-brand {
+    font-size: 1.5rem; /* Kích thước mặc định */
+}
+
+@media (max-width: 768px) {
+    .navbar-brand {
+        font-size: 0.4rem; /* Kích thước nhỏ hơn trên mobile */
+        padding: 0.5rem; /* Điều chỉnh padding để giảm kích thước logo */
+    }
+}
+
+
 .navbar.scrolled {
     background-color: rgba(0, 0, 0, 0.7);
     border-bottom: none;
@@ -160,7 +172,7 @@
     }
 
     .carousel-caption p {
-        font-size: 0.8rem !important;
+        font-size: 0.7rem !important;
     }
 }
 
